# ai_model

./: .gitignore  AIModel.sln  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TRAINING.md  USAGE.md  config.example.json  config.sample.json
.cargo/: config.toml
.github/: README.md
.github/workflows/: ci.yml  cleanup.yml  nightly.yml  release.yml
benches/: model_performance.rs
examples/: basic_usage.rs  custom_tools.rs
goldbull-brief/: Cargo.toml
goldbull-brief/src/: lib.rs  main.rs  model.rs  summarization.rs  train.rs  training.rs
goldbull-code/: Cargo.toml
goldbull-code/src/: completion.rs  generation.rs  lib.rs  main.rs  model.rs  syntax.rs  train.rs  train.rs.bak  training.rs
goldbull-core/: Cargo.toml
goldbull-core/src/: config.rs  error.rs  lib.rs  model.rs  onnx_converter.rs  tensor.rs  utils.rs
goldbull-embedding/: Cargo.toml
goldbull-embedding/src/: embeddings.rs  lib.rs  main.rs  model.rs  train.rs  training.rs
goldbull-multimodel/: Cargo.toml
goldbull-multimodel/src/: lib.rs  main.rs  model.rs  multimodal.rs  train.rs  training.rs
goldbull-sage/: Cargo.toml
goldbull-sage/src/: lib.rs  main.rs  model.rs  qa.rs  train.rs  train.rs.bak  training.rs
goldbull-text/: Cargo.toml
goldbull-text/examples/: cpu_optimization_demo.rs
goldbull-text/src/: generation.rs  lib.rs  main.rs  model.rs  train.rs  training.rs  transformer.rs
goldbull-tokenizer/: Cargo.toml
goldbull-tokenizer/src/: bpe.rs  lib.rs  tiktoken.rs  vocab.rs
goldbull-vision/: Cargo.toml
goldbull-vision/src/: lib.rs  main.rs  model.rs  train.rs  training.rs  vision.rs
models/: bpe_tokenizer.json  converted_model.onnx
scripts/: train_bigcode.py
src/: lib.rs  main.rs
src/AIModel.CLI/: AIModel.CLI.csproj  Program.cs
src/AIModel.Core/: AIModel.Core.csproj
src/AIModel.Core/Interfaces/: IAIModel.cs  IFunctionCaller.cs  IMCPClient.cs
src/AIModel.Core/MCP/: MCPClient.cs
src/AIModel.Core/Models/: FunctionModels.cs  GenerationModels.cs  ModelConfiguration.cs
src/AIModel.Core/Services/: AIService.cs  CpuAIModel.cs  FunctionCaller.cs
src/core/: mod.rs
src/inference/: llama_cpp.rs  mod.rs  onnx.rs
src/memory/: mod.rs
src/models/: goldbull.rs  goldbull_embedding.rs  mod.rs  neural_network.rs
src/tasks/: mod.rs
src/tokenizer/: mod.rs  tiktoken_bpe.rs
src/tools/: mod.rs
src/utils/: mod.rs
tests/: integration_tests.rs
tests/AIModel.Tests/: AIModel.Tests.csproj  UnitTest1.cs
