[package]
name = "goldbull"
version = "0.1.0"
edition = "2021"
description = "Goldbull: Enterprise-grade ML model with BPE tokenizer, embedding model, and NLP capabilities"
authors = ["Goldbull AI Team"]
license = "MIT"

[[bin]]
name = "goldbull"
path = "src/main.rs"

[[bin]]
name = "train_tokenizer"
path = "src/bin/train_tokenizer.rs"

[[bin]]
name = "train_model"  
path = "src/bin/train_model.rs"

[lib]
name = "goldbull"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ndarray = "0.15"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.0"
async-trait = "0.1"
# Unicode-aware text segmentation for tiktoken-style BPE
unicode-segmentation = "1.11"
# Training and dataset utilities  
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# For BPEmb vocabulary integration
flate2 = "1.0"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "model_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
