[workspace]
resolver = "2"
members = [
    "goldbull-core",
    "goldbull-tokenizer",
    "goldbull-text",
]

[workspace.package]
version = "0.1.0"
authors = ["Goldbull AI Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SaileshBellamkonda/ai_model"
homepage = "https://github.com/SaileshBellamkonda/ai_model"
description = "Lightweight, high-accuracy, CPU-friendly AI models suite"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# ML/AI dependencies
candle-core = "0.9"
candle-nn = "0.9" 
candle-transformers = "0.9"
tch = "0.14"
ndarray = "0.16"
safetensors = "0.6"

# Tokenization
unicode-segmentation = "1.10"
regex = "1.10"
base64 = "0.21"

# Data processing
hf-hub = "0.3"
memmap2 = "0.9"
rayon = "1.8"

# Inference engines
ort = "1.16"  # ONNX Runtime

# HTTP/API
reqwest = { version = "0.11", features = ["json"] }