[workspace]
resolver = "2"
members = [
    "goldbull-core",
    "goldbull-tokenizer",
    "goldbull-text",
    "goldbull-code",
    "goldbull-sage",
    "goldbull-brief",
    "goldbull-vision",
    "goldbull-multimodel",
    "goldbull-embedding",
]

[workspace.package]
version = "0.1.0"
authors = ["Goldbull AI Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/SaileshBellamkonda/ai_model"
homepage = "https://github.com/SaileshBellamkonda/ai_model"
description = "Lightweight, high-accuracy, CPU-friendly AI models suite"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# ML/AI dependencies
candle-core = "0.9"
candle-nn = "0.9" 
candle-transformers = "0.9"
tch = "0.14"
ndarray = "0.16"
safetensors = "0.6"

# Tokenization
unicode-segmentation = "1.10"
regex = "1.10"
base64 = "0.21"

# Data processing
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio"] }
memmap2 = "0.9"
rayon = "1.8"
num_cpus = "1.16"

# Inference engines
ort = "1.16"  # ONNX Runtime

# HTTP/API
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "macos-system-configuration", "__rustls"] }

# Tree-sitter for syntax analysis
tree-sitter = "=0.20.10"
tree-sitter-rust = "=0.20.3"
tree-sitter-python = "=0.20.3" 
tree-sitter-javascript = "=0.20.0"
tree-sitter-typescript = "=0.20.3"
tree-sitter-java = "=0.20.2"
tree-sitter-cpp = "=0.20.2"
tree-sitter-c = "=0.20.4"
tree-sitter-go = "=0.20.0"

# File system traversal
walkdir = "2.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# TLS provider configuration
rustls = { version = "0.23.31", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs", "http1", "http2", "tls12"] }

# Security fix: Force ring upgrade to fix RUSTSEC-2025-0009
ring = "0.17.14"