[package]
name = "goldbull-brief"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Goldbull Brief - Text Summarization AI Model"

# Define binary targets - keep only training
[[bin]]
name = "goldbull-brief-train"
path = "src/train.rs"

[dependencies]
# Core dependencies
goldbull-core = { path = "../goldbull-core" }
goldbull-tokenizer = { path = "../goldbull-tokenizer" }

# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

# ML/AI dependencies
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
safetensors.workspace = true

# Data processing
rayon.workspace = true
memmap2.workspace = true
hf-hub.workspace = true

# Text processing
regex.workspace = true