[package]
name = "goldbull-code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code completion model for goldbull AI suite"

[[bin]]
name = "goldbull-code-cli"
path = "src/main.rs"

[[bin]]
name = "goldbull-code-train"
path = "src/train.rs"

[dependencies]
goldbull-core = { path = "../goldbull-core" }
goldbull-tokenizer = { path = "../goldbull-tokenizer" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
clap.workspace = true
hf-hub.workspace = true
rayon.workspace = true
rand = "0.8"
safetensors.workspace = true
bytemuck = "1.14"
chrono.workspace = true
walkdir.workspace = true
regex.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-go.workspace = true
half = "2.3"

[features]
default = []
cuda = ["candle-core/cuda"]