[package]
name = "goldbull-embedding"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Goldbull Embedding - Text Embedding AI Model"

[dependencies]
# Core dependencies
goldbull-core = { path = "../goldbull-core" }
goldbull-tokenizer = { path = "../goldbull-tokenizer" }

# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true

# ML/AI dependencies
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
safetensors.workspace = true
ndarray.workspace = true

# Data processing
rayon.workspace = true
memmap2.workspace = true
hf-hub.workspace = true

# HTTP for similarity APIs
reqwest.workspace = true