[package]
name = "goldbull-text"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Text generation model for goldbull AI suite"

# Define binary targets - keep only training
[[bin]]
name = "goldbull-text-train"
path = "src/train.rs"

[dependencies]
goldbull-core = { path = "../goldbull-core" }
goldbull-tokenizer = { path = "../goldbull-tokenizer" }
goldbull-code = { path = "../goldbull-code" }
goldbull-vision = { path = "../goldbull-vision" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
clap.workspace = true
hf-hub.workspace = true
rayon.workspace = true
rand = "0.8"
safetensors.workspace = true
bytemuck = "1.14"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "cpu_optimization_demo"
path = "examples/cpu_optimization_demo.rs"