[package]
name = "goldbull-tokenizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TikToken-style BPE tokenizer for goldbull AI models"

[dependencies]
goldbull-core = { path = "../goldbull-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
regex.workspace = true
base64.workspace = true
memmap2.workspace = true
tracing.workspace = true